--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
-group 'ru.deysa.investment.assistant.store'
+group 'ru.deysa.investment.assistant'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("ch.qos.logback:logback-classic:1.1.3")
+        classpath("org.springframework:spring-web:4.1.4.RELEASE")
+        classpath("com.fasterxml.jackson.core:jackson-databind:2.8.10")
+    }
+}
 
-sourceCompatibility = 1.8
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'maven-publish'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.springframework:spring-web:4.1.4.RELEASE")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.8.10")
+    testCompile("junit:junit:4.12")
 }
