--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
     }
     dependencies {
@@ -25,4 +26,12 @@ dependencies {
     compile("org.springframework:spring-web:4.1.4.RELEASE")
     compile("com.fasterxml.jackson.core:jackson-databind:2.8.10")
     testCompile("junit:junit:4.12")
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
